package NAntiRobot;

message TCbbCacheItem {
    optional string Request = 1;
    optional string Content = 2;
}
